docs/app-io/manuale-servizi/v1.0/SUMMARY.md
# Table of contents

* [🏠 Il manuale dei servizi dell'app IO](README.md)
* [🕐 Changelog](../../../zcLztiq5qDSVw9rRjW7p/changelog.md)

## 🔵 L'APP IO E I SERVIZI

* [Cos'è IO e qual è il suo obiettivo](../../../zcLztiq5qDSVw9rRjW7p/cose-io-e-qual-e-il-suo-obiettivo.md)
* [Cos'è un servizio per IO](../../../zcLztiq5qDSVw9rRjW7p/cose-un-servizio-per-io.md)
* [Le funzionalità di IO a disposizione degli enti](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/README.md)
  * [Erogare e fare conoscere i servizi su IO](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/erogare-e-fare-conoscere-i-servizi-su-io.md)
  * [Informare i cittadini](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/informare-i-cittadini.md)
  * [Ottenere un pagamento](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/ottenere-un-pagamento.md)
  * [Autenticare con certezza i cittadini](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/autenticare-con-certezza-i-cittadini.md)
  * [Ottenere una firma dai cittadini (in arrivo)](../../../zcLztiq5qDSVw9rRjW7p/le-funzionalita-di-io-a-disposizione-degli-enti/ottenere-una-firma-dai-cittadini-in-arrivo.md)

## 🏫 Gli attori dei servizi

* [Quali enti possono erogare servizi su IO](../../../zcLztiq5qDSVw9rRjW7p/gli-attori-dei-servizi/quali-enti-possono-erogare-servizi-su-io.md)
* [Chi sono i destinatari dei servizi su IO](../../../zcLztiq5qDSVw9rRjW7p/gli-attori-dei-servizi/chi-sono-i-destinatari-dei-servizi-su-io.md)

## 📣 TONO DI VOCE

* [Il tono di voce dei servizi](../../../zcLztiq5qDSVw9rRjW7p/il-tono-di-voce-dei-servizi/README.md)
  * [Comunica in modo chiaro e trasparente](../../../zcLztiq5qDSVw9rRjW7p/il-tono-di-voce-dei-servizi/comunica-in-modo-chiaro-e-trasparente.md)
  * [Usa un linguaggio informale](../../../zcLztiq5qDSVw9rRjW7p/il-tono-di-voce-dei-servizi/usa-un-linguaggio-informale.md)

## 🖍️ COME SI CREA UN SERVIZIO

* [Le tipologie di servizio](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/le-tipologie-di-servizio.md)
* [Definire un servizio](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/definire-un-servizio/README.md)
  * [1️⃣ Qual è l'obiettivo del servizio?](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/definire-un-servizio/qual-e-lobiettivo-del-servizio.md)
  * [2️⃣ Chi sono i destinatari del servizio?](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/definire-un-servizio/chi-sono-i-destinatari-del-servizio.md)
  * [3️⃣ Come viene raggiunto l'obiettivo?](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/definire-un-servizio/come-viene-raggiunto-lobiettivo.md)
  * [4️⃣ Cosa avviene su IO?](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/definire-un-servizio/cosa-avviene-su-io.md)
* [La scheda servizio](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/la-scheda-servizio/README.md)
  * [Nome del servizio](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/la-scheda-servizio/nome-del-servizio.md)
  * [Descrizione](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/la-scheda-servizio/descrizione.md)
  * [Logo](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/la-scheda-servizio/logo.md)
  * [Contatti e informazioni](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/la-scheda-servizio/contatti-e-informazioni.md)
* [Pubblicazione, validazione e modifica di un servizio](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/pubblicazione-validazione-e-modifica-di-un-servizio/README.md)
  * [Validazione](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/pubblicazione-validazione-e-modifica-di-un-servizio/validazione.md)
  * [Pubblicazione](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/pubblicazione-validazione-e-modifica-di-un-servizio/pubblicazione.md)
  * [Modifica](../../../zcLztiq5qDSVw9rRjW7p/come-si-crea-un-servizio/pubblicazione-validazione-e-modifica-di-un-servizio/modifica.md)

## 🎨 Che cosa può fare un servizio su IO

* [Inviare messaggi](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/README.md)
  * [Messaggi informativi](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-informativi.md)
  * [Messaggi che veicolano un pagamento](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-un-pagamento/README.md)
    * [Soluzioni per pagamenti a rate](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-un-pagamento/soluzioni-per-pagamenti-a-rate.md)
  * [Messaggi che veicolano una scadenza](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-una-scadenza.md)
  * [Messaggi con allegati (Premium)](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-con-allegati-premium.md)
  * [Quando mandare un messaggio?](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/quando-mandare-un-messaggio.md)
* [Cosa fare in caso di errori nell'invio](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/README.md)
  * [Errore nei dati del messaggio](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/errore-nei-dati-del-messaggio.md)
  * [Destinatari sbagliati](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/destinatari-sbagliati.md)
  * [Messaggio di test inviato ai cittadini](../../../zcLztiq5qDSVw9rRjW7p/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/messaggio-di-test-inviato-ai-cittadini.md)

## 📣 Comunicare un servizio

* [I canali](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/i-canali.md)
* [I casi d'uso](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/i-casi-duso.md)
* [Nuovi servizi su IO](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/nuovi-servizi-su-io.md)
* [🔄 Modificare o ampliare un servizio](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/modificare-o-ampliare-un-servizio.md)
* [Disservizi, problemi tecnici ed errori](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/disservizi-problemi-tecnici-ed-errori.md)
* [Scadenze importanti](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/scadenze-importanti.md)
* [Comunicare un obiettivo raggiunto](../../../zcLztiq5qDSVw9rRjW7p/comunicare-un-servizio/comunicare-un-obiettivo-raggiunto.md)

## 📝 MODELLI

* [I modelli dei servizi più comuni](../../../zcLztiq5qDSVw9rRjW7p/modelli/i-modelli-dei-servizi-piu-comuni/README.md)
  * [Tassa sui rifiuti (TARI)](../../../zcLztiq5qDSVw9rRjW7p/modelli/i-modelli-dei-servizi-piu-comuni/tassa-sui-rifiuti-tari.md)
  * [Carta d'Identità Elettronica](../../../zcLztiq5qDSVw9rRjW7p/modelli/i-modelli-dei-servizi-piu-comuni/carta-didentita-elettronica.md)
  * [Multe per violazione codice della strada](../../../zcLztiq5qDSVw9rRjW7p/modelli/i-modelli-dei-servizi-piu-comuni/multe-per-violazione-codice-della-strada.md)
  * [Rimozione veicoli](../../../zcLztiq5qDSVw9rRjW7p/modelli/i-modelli-dei-servizi-piu-comuni/rimozione-veicoli.md)

## ⬇️ RISORSE UTILI

* [Glossario](../../../zcLztiq5qDSVw9rRjW7p/risorse-utili/glossario.md)
* [Checklist](../../../zcLztiq5qDSVw9rRjW7p/risorse-utili/checklist.md)
* [Link utili](../../../zcLztiq5qDSVw9rRjW7p/risorse-utili/link-utili.md)
* [Contatti](../../../zcLztiq5qDSVw9rRjW7p/risorse-utili/contatti.md)
