docs/app-io/manuale-servizi/v2.0/SUMMARY.md
# Table of contents

* [🏠 Il manuale dei servizi dell'app IO](README.md)
* [🕐 Storico delle modifiche](../../../xWONfJmawghGo2ekuaKh/storico-delle-modifiche.md)

## 🔵 L'APP IO

* [Cos'è IO e qual è il suo obiettivo](../../../xWONfJmawghGo2ekuaKh/cose-io-e-qual-e-il-suo-obiettivo.md)
* [Le funzionalità di IO a disposizione degli enti](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/README.md)
  * [Erogare e fare conoscere i servizi su IO](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/erogare-e-fare-conoscere-i-servizi-su-io.md)
  * [Informare i cittadini](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/informare-i-cittadini.md)
  * [Ottenere un pagamento](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/ottenere-un-pagamento.md)
  * [Autenticare con certezza i cittadini](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/autenticare-con-certezza-i-cittadini.md)
  * [Ottenere una firma dai cittadini](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/ottenere-una-firma-dai-cittadini.md)
  * [Inviare comunicazioni a valore legale](../../../xWONfJmawghGo2ekuaKh/le-funzionalita-di-io-a-disposizione-degli-enti/inviare-comunicazioni-a-valore-legale.md)

## 🏫 Gli attori di IO

* [Quali enti possono erogare servizi su IO](../../../xWONfJmawghGo2ekuaKh/gli-attori-di-io/quali-enti-possono-erogare-servizi-su-io.md)
* [Chi sono i destinatari dei servizi su IO](../../../xWONfJmawghGo2ekuaKh/gli-attori-di-io/chi-sono-i-destinatari-dei-servizi-su-io.md)

## 📄 I SERVIZI IN IO

* [Cos'è un servizio per IO](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/cose-un-servizio-per-io.md)
* [Definire un servizio](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/definire-un-servizio/README.md)
  * [1️⃣ Qual è l'obiettivo del servizio?](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/definire-un-servizio/qual-e-lobiettivo-del-servizio.md)
  * [2️⃣ Chi sono i destinatari del servizio?](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/definire-un-servizio/chi-sono-i-destinatari-del-servizio.md)
  * [3️⃣ Come viene raggiunto l'obiettivo?](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/definire-un-servizio/come-viene-raggiunto-lobiettivo.md)
  * [4️⃣ Cosa avviene su IO?](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/definire-un-servizio/cosa-avviene-su-io.md)
* [Le tipologie di servizio](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/le-tipologie-di-servizio.md)
* [Informazioni sensibili](../../../xWONfJmawghGo2ekuaKh/i-servizi-in-io/informazioni-sensibili.md)

## 🖍️ COME SI CREA UN SERVIZIO

* [La scheda servizio](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/la-scheda-servizio/README.md)
  * [Nome del servizio](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/la-scheda-servizio/nome-del-servizio.md)
  * [Descrizione](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/la-scheda-servizio/descrizione.md)
  * [Logo](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/la-scheda-servizio/logo.md)
  * [Contatti e informazioni](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/la-scheda-servizio/contatti-e-informazioni.md)
* [Validazione, pubblicazione e modifica di un servizio](../../../xWONfJmawghGo2ekuaKh/come-si-crea-un-servizio/validazione-pubblicazione-e-modifica-di-un-servizio.md)

## 🎨 Che cosa può fare un servizio su IO

* [Inviare messaggi](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/README.md)
  * [Messaggi informativi](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-informativi.md)
  * [Messaggi che veicolano un pagamento](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-un-pagamento/README.md)
    * [Soluzioni per pagamenti a rate](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-un-pagamento/soluzioni-per-pagamenti-a-rate.md)
  * [Messaggi che veicolano una scadenza](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-che-veicolano-una-scadenza.md)
  * [Messaggi con allegati (Premium)](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/messaggi-con-allegati-premium.md)
  * [Quando mandare un messaggio?](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/inviare-messaggi/quando-mandare-un-messaggio.md)
* [Cosa fare in caso di errori nell'invio](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/README.md)
  * [Errore nei dati del messaggio](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/errore-nei-dati-del-messaggio.md)
  * [Destinatari sbagliati](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/destinatari-sbagliati.md)
  * [Messaggio di test inviato ai cittadini](../../../xWONfJmawghGo2ekuaKh/che-cosa-puo-fare-un-servizio-su-io/cosa-fare-in-caso-di-errori-nellinvio/messaggio-di-test-inviato-ai-cittadini.md)

## 👅 TONO DI VOCE

* [Il tono di voce dei servizi](../../../xWONfJmawghGo2ekuaKh/tono-di-voce/il-tono-di-voce-dei-servizi/README.md)
  * [Comunica in modo chiaro e trasparente](../../../xWONfJmawghGo2ekuaKh/tono-di-voce/il-tono-di-voce-dei-servizi/comunica-in-modo-chiaro-e-trasparente.md)
  * [Usa un linguaggio informale](../../../xWONfJmawghGo2ekuaKh/tono-di-voce/il-tono-di-voce-dei-servizi/usa-un-linguaggio-informale.md)

## 📣 Comunicare un servizio

* [I canali](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-canali.md)
* [I casi d'uso](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/README.md)
  * [Nuovi servizi su IO](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/nuovi-servizi-su-io.md)
  * [Disservizi, problemi tecnici ed errori](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/disservizi-problemi-tecnici-ed-errori.md)
  * [Scadenze importanti](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/scadenze-importanti.md)
  * [Comunicare un obiettivo raggiunto](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/comunicare-un-obiettivo-raggiunto.md)
  * [Modificare o ampliare un servizio](../../../xWONfJmawghGo2ekuaKh/comunicare-un-servizio/i-casi-duso/modificare-o-ampliare-un-servizio.md)

## 📝 CATALOGO DEI SERVIZI E MODELLI

* [Il catalogo dei servizi dei Comuni](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/il-catalogo-dei-servizi-dei-comuni.md)
* [I modelli dei servizi più frequenti](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/i-modelli-dei-servizi-piu-frequenti/README.md)
  * [Tassa sui rifiuti (TARI)](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/i-modelli-dei-servizi-piu-frequenti/tassa-sui-rifiuti-tari.md)
  * [Carta d'Identità Elettronica](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/i-modelli-dei-servizi-piu-frequenti/carta-didentita-elettronica.md)
  * [Multe per violazione codice della strada](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/i-modelli-dei-servizi-piu-frequenti/multe-per-violazione-codice-della-strada.md)
  * [Rimozione veicoli](../../../xWONfJmawghGo2ekuaKh/catalogo-dei-servizi-e-modelli/i-modelli-dei-servizi-piu-frequenti/rimozione-veicoli.md)

## ⬇️ APPENDICE

* [Glossario](../../../xWONfJmawghGo2ekuaKh/appendice/glossario.md)
* [Lista di controllo](../../../xWONfJmawghGo2ekuaKh/appendice/lista-di-controllo.md)
* [Risorse utili](../../../xWONfJmawghGo2ekuaKh/appendice/risorse-utili.md)
* [Contatti](../../../xWONfJmawghGo2ekuaKh/appendice/contatti.md)
